# DotNetCoreBackendGenerator

./: .cursorrules  .env  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  app.py  code_generator.py  database_reader.py  fastapi_generator.py  pyproject.toml  utils.py
templates/: application.csproj.j2  application_di_extensions.cs.j2  application_service.cs.j2  application_service_interface.cs.j2  appsettings.json.j2  controller.cs.j2  create_dto.cs.j2  dto_validator.cs.j2  entity.cs.j2  infrastructure.csproj.j2  infrastructure_di_extensions.cs.j2  program.cs.j2  repository_dapper.cs.j2  repository_interface.cs.j2  update_dto.cs.j2  webapi.csproj.j2
templates/application/: application_di_extensions.cs.j2  application_service.cs.j2  application_service_interface.cs.j2  controller.cs.j2  program.cs.j2
templates/core/: entity.cs.j2
templates/dtos/: create_dto.cs.j2  pagination_request.cs.j2  update_dto.cs.j2
templates/fastapi/application/: service.py.j2
templates/fastapi/core/: entity.py.j2
templates/fastapi/infrastructure/: sqlalchemy_model.py.j2
templates/infrastructure/: repository_dapper.cs.j2  repository_interface.cs.j2
